ingress-fast-apy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  rules:
  - host: httpbin.example.com
    http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 8000

# The kubernetes.io/ingress.class annotation is required to tell the Istio gateway controller
#  that it should handle this Ingress, otherwise it will be ignored.

# - Access the httpbin service using curl:

# $ curl -s -I -HHost:httpbin.example.com "http://$INGRESS_HOST:$INGRESS_PORT/status/200"
# HTTP/1.1 200 OK
# server: istio-envoy

#  Note that you use the -H flag to set the Host HTTP header to “httpbin.example.com”. This is needed because the Ingress is configured to handle “httpbin.example.com”, but in your test environment you have no DNS binding for that host and are simply sending your request to the ingress IP.

# - Access any other URL that has not been explicitly exposed. You should see an HTTP 404 error:

# $ curl -s -I -HHost:httpbin.example.com "http://$INGRESS_HOST:$INGRESS_PORT/headers"
# HTTP/1.1 404 Not Found
